# kira_cdh_compat_kmer_indexer

./: Cargo.toml  README.md
src/: builder.rs  encode.rs  index.rs  io.rs  lib.rs  plr.rs  radix.rs
tests/: encode.rs  proptests.rs
